Fixed shop button

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -3,16 +3,17 @@
   place-content: center;
   text-align: center;
   position: relative;
-  border: 1px solid;
+  /* border: 1px solid; */
 }
 
 .shoe-display img {
-  width: 60%;
+  max-width: 65%;
 }
 
 .shop-btn {
   position: absolute;
   bottom: 16px;
+  right: 320px;
   font-size: 24px;
   padding: 8px;
 }
